safari layout issue fixed

--- a/stylesheet/angStyle.css
+++ b/stylesheet/angStyle.css
@@ -201,9 +201,9 @@ h3 {
 	}
 
 	#movieDivs {
+		display: block;
 		-moz-flex-direction: column;
 		-ms-flex-direction: column;
-		-webkit-flex-direction: column;
 		flex-direction: column;
 	}
 
